--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Books App</title>
 </head>
 <body>
-    <h2>BOOKS APP</h2>
-    <table class="table">
+    <div class="container">
+        <div class="row">
+            <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                <h2>BOOKS APP</h2>
+    <table class="table table-borderless">
         <tr>
             <td>Book Nmae</td>
             <td><input type="text" class="form-control"></td>
@@ -34,6 +37,9 @@
             <td><Button class="btn btn-warning">SUBMIT</Button></td>
         </tr>
     </table>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
